ext/yuni/nany/tests/invalid/comment_not_closed.ny
# Testing detection of comments not properly closed

#* This comment is not closed
